--- a/acp-webproject/WebContent/index.html
+++ b/acp-webproject/WebContent/index.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <p>
-                  Yaro Alejandro xd ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
+                  Yaro Alejandro xd :C ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
                   fugit dolor deserunt voluptas, repudiandae commodi quae perspiciatis, qui eaque 
                   ad facere recusandae ipsum atque repellat tempora pariatur ut.
                 </p>
