--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
+                  Marcos ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
                   fugit dolor deserunt voluptas, repudiandae commodi quae perspiciatis, qui eaque 
                   ad facere recusandae ipsum atque repellat tempora pariatur ut.
                 </p>
