--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link" href="#">Eventos</a></li>
           <li><a class="nav-link" href="#">Árboles</a></li>
           <li><a class="nav-link" href="#">Mapa</a></li>
-          <li><a class="nav-link" href="#">Publicaciones</a></li>
+          <li><a class="nav-link" href="publicaciones.html">Publicaciones</a></li>
           <li class="dropdown"><a href="#"><span>In case</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
