--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -70,7 +70,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a href="InicioSesion.html"><img src="assets/img/usuario.png"></a></li>
+          <li><a href="inicioSesion.html"><img src="assets/img/usuario.png"></a></li>
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -126,7 +126,7 @@
                 </div>
 
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
+                  Laura Gradiz Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde illo 
                   fugit dolor deserunt voluptas, repudiandae commodi quae perspiciatis, qui eaque 
                   ad facere recusandae ipsum atque repellat tempora pariatur ut.
                 </p>
