--- a/WebContent/arboles.html
+++ b/WebContent/arboles.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PWACP - Portal Web Arboreto Carmelo Palma</title>
+  <title>PWACP - Portal Web Arboreto Carmelo Palmaa</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
